fix: update render.yaml and manifest.yml for enhanced service configuration
- Added new environment variables for Flowise API key and session secret to improve security and functionality.
- Updated Auth0 configuration to ensure proper deployment context by setting sync properties for relevant keys.
- Enhanced Redis and database configurations with clear comments on security practices and access control.
- Adjusted variable definitions in manifest files for better clarity and separation of database configurations.

These changes improve the overall clarity, security, and functionality of the service configurations, ensuring a more robust deployment setup.

--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -51,21 +51,21 @@ secrets:
 
 # Configuration variables required for the web service
 variables: # Pass environment variables as key value pairs.
-    NUMBER_OF_PROXIES: '1'
-    NODE_ENV: production
-    PORT: '3000'
-    HOSTNAME: '0.0.0.0'
-    NEXT_TELEMETRY_DISABLED: '1'
     AUTH0_BASE_URL: ${AUTH0_BASE_URL}
     ANSWERAI_DOMAIN: 'http://web:3000'
     FLOWISE_DOMAIN: 'http://flowise:4000'
     DOMAIN: 'http://flowise:4000'
     # External API endpoint for OAuth callbacks, MCP tools, and external integrations
     API_HOST: 'https://api.${CLIENT_DOMAIN}'
-    # Database separation: Web service uses different database than Flowise
-    WEB_DATABASE_NAME: 'web' # Override flowise database name from shared secret
+    # Override for Database separation: Web service uses different database than Flowise
+    WEB_DATABASE_NAME: 'web'
     REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
+    NUMBER_OF_PROXIES: '1'
+    NODE_ENV: production
+    PORT: '3000'
+    HOSTNAME: '0.0.0.0'
+    NEXT_TELEMETRY_DISABLED: '1'
 
 # Environment-specific overrides
 environments:
