--- a/render.yaml
+++ b/render.yaml
@@ -44,7 +44,9 @@ services:
           - key: DATABASE_TYPE
             value: postgres
           - key: DATABASE_URL
-            value: postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public&connection_limit=1
+            fromDatabase:
+                name: aai-unified3-database
+                property: connectionString
           - key: CHATFLOW_DOMAIN
             value: https://api.${CLIENT_DOMAIN}
           - key: DATABASE_HOST
