feat: implement schema separation and clean database configuration
- Add DATABASE_SECRET configuration for both Flowise and web services
- Implement schema separation: Flowise uses 'public' schema, web uses 'web' schema
- Remove redundant database environment variables (DATABASE_URL, DATABASE_NAME, WEB_DATABASE_NAME)
- Update entrypoint.sh and next.config.js to construct DATABASE_URL from DATABASE_SECRET
- Fix internal service communication (API_HOST, ANSWERAI_DOMAIN)
- Add missing S3 configuration variables with sync: false for manual setup
- Clean up database configuration to use single source of truth via DATABASE_SECRET
- Ensure web service uses hardcoded 'schema=web' for proper schema isolation
- Maintain backward compatibility for existing deployments using public schema

This change enables proper database schema separation while simplifying the
configuration by using DATABASE_SECRET as the single source of truth for all
database connection details.

--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -57,8 +57,7 @@ variables: # Pass environment variables as key value pairs.
     DOMAIN: 'http://flowise:4000'
     # External API endpoint for OAuth callbacks, MCP tools, and external integrations
     API_HOST: 'https://api.${CLIENT_DOMAIN}'
-    # Override for Database separation: Web service uses different database than Flowise
-    WEB_DATABASE_NAME: 'web'
+    # Database name will be set from DATABASE_SECRET
     REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
     NUMBER_OF_PROXIES: '1'
