--- a/render.yaml
+++ b/render.yaml
@@ -346,7 +346,7 @@ services:
 # ================================================================
 databases:
     - name: aai-unified3-database
-      databaseName: aai-unified-database
+      databaseName: aaiUnifiedDB
       user: admin
       plan: basic-256mb
       region: virginia
