fix: update render.yaml to correct database name format
- Changed the databaseName from 'aaiUnifiedDB' to 'aai_unified_database' for consistency with naming conventions.
- This update ensures clarity and adherence to the established database naming standards in the configuration.

--- a/render.yaml
+++ b/render.yaml
@@ -346,7 +346,7 @@ services:
 # ================================================================
 databases:
     - name: aai-unified3-database
-      databaseName: aaiUnifiedDB
+      databaseName: aai_unified_database
       user: admin
       plan: basic-256mb
       region: virginia
