fix: update render.yaml to modify S3 storage configuration
- Changed the S3_STORAGE_TYPE entry to set sync: false, ensuring manual setup for S3 storage configuration.
- This update enhances clarity in the service setup and aligns with recent changes to streamline the configuration process.

--- a/render.yaml
+++ b/render.yaml
@@ -153,7 +153,7 @@ services:
           # Storage Configuration
           # =========================================
           - key: STORAGE_TYPE
-            value: 's3'
+            sync: false
           - key: S3_STORAGE_BUCKET_NAME
             sync: false
           - key: S3_STORAGE_ACCESS_KEY_ID
