feat: enhance copilot scripts with comprehensive testing and validation
## 🚀 New Features

### Testing Framework
- Introduced a comprehensive test suite for copilot scripts to ensure production readiness.
- Added individual test scripts for core functionalities including environment file creation, Route53 zone management, and application switching.

### Script Enhancements
- Improved error handling and user guidance across all scripts.
- Added parameter validation and success message checks to enhance user experience.

### Integration with Auto-Deploy
- Integrated testing into the copilot-auto-deploy workflow to ensure all scripts are validated before deployment.

## 📚 Documentation
- Created README files for the test suite detailing usage, test coverage, and troubleshooting.
- Updated existing documentation to reflect new testing capabilities and script enhancements.

## 🔧 Technical Improvements
- Enhanced existing scripts with better validation and error messaging.
- Streamlined the deployment process with clear instructions for manual configurations.

## 📊 Impact
- 10 files modified/added.
- 800 lines added, 20 lines removed.
- Comprehensive testing ensures robust and reliable copilot script functionality.

--- a/copilot/copilot.appName.web.env.template
+++ b/copilot/copilot.appName.web.env.template
@@ -25,7 +25,7 @@ AUTH0_SECRET=  # Required: Must be same as Flowise server
 FLAGSMITH_ENVIRONMENT_ID=
 
 # Debug settings (disable in production)
-DEBUG=true
-VERBOSE=true
-LOG_LEVEL=debug
-AUTH0_DEBUG=true
+DEBUG=false
+VERBOSE=false
+AUTH0_DEBUG=false
+LOG_LEVEL=warn
