fix: update render.yaml to correct S3_FORCE_PATH_STYLE configuration
- Changed the S3_FORCE_PATH_STYLE value from 'true' to 'false' to align with AWS S3 requirements.
- Added a comment to clarify the purpose of the S3_FORCE_PATH_STYLE setting, indicating its relevance for S3-compatible services.
- This update enhances the configuration clarity and ensures proper functionality with AWS S3 and compatible services.

--- a/render.yaml
+++ b/render.yaml
@@ -296,8 +296,9 @@ services:
             sync: false
           - key: S3_STORAGE_REGION
             sync: false
+          # S3_FORCE_PATH_STYLE: false for AWS S3, true for S3-compatible services (MinIO, DigitalOcean, etc.)
           - key: S3_FORCE_PATH_STYLE
-            value: 'true'
+            value: 'false'
 
           # =========================================
           # Flowise Langfuse Tracing
