fix: update Dockerfile to remove platform specification
- Removed the platform specification from the Dockerfile to simplify the build process and ensure compatibility with the default architecture.
- This change aligns with recent efforts to streamline Docker configurations and enhance deployment clarity.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 node:20-slim AS base
+FROM node:20-slim AS base
 
 # This Dockerfile is optimized for Next.js standalone mode deployment
 # Make sure you update both files if copying to documentation!
